<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    
    <ImageView
        android:id="@+id/iv_notify"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/error_logo"/>

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-32dp"
        android:text="@string/error_headline"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_message"/>

</LinearLayout>