<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/shimmer_card_poster"
        android:layout_width="180dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/shimmer_iv_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_400"
            android:contentDescription="@string/poster" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shimmer_card_language"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/shimmer_card_poster"
        app:layout_constraintStart_toEndOf="@id/shimmer_card_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray_400"
                android:contentDescription="@string/language"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

            <TextView
                android:id="@+id/shimmer_tv_language"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shimmer_card_duration"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/shimmer_card_language"
        app:layout_constraintStart_toEndOf="@id/shimmer_card_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray_400"
                android:contentDescription="@string/duration"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

            <TextView
                android:id="@+id/shimmer_tv_runtime"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shimmer_card_rating"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/shimmer_card_duration"
        app:layout_constraintStart_toEndOf="@id/shimmer_card_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray_400"
                android:contentDescription="@string/rating"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

            <TextView
                android:id="@+id/shimmer_tv_rating"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@color/gray_400"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/shimmer_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:background="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@id/shimmer_card_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/shimmer_tv_release"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/shimmer_tv_genres"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_release"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/shimmer_barrier"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/shimmer_tv_synopsis"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@id/shimmer_barrier"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/shimmer_tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/gray_400"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_synopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shimmer_btn_favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gray_400"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_overview"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shimmer_btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/gray_400"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/shimmer_tv_overview"
        app:layout_constraintStart_toEndOf="@id/shimmer_btn_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>